--- a/livecode/02_morning.ipynb
+++ b/livecode/02_morning.ipynb
@@ -193,110 +193,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                 weight   R-squared:                       0.846\n",
+      "Model:                            OLS   Adj. R-squared:                  0.845\n",
+      "Method:                 Least Squares   F-statistic:                     1067.\n",
+      "Date:                Mon, 24 Feb 2020   Prob (F-statistic):          1.19e-158\n",
+      "Time:                        20:35:08   Log-Likelihood:                -2833.1\n",
+      "No. Observations:                 392   AIC:                             5672.\n",
+      "Df Residuals:                     389   BIC:                             5684.\n",
+      "Df Model:                           2                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "Intercept    528.8767     56.816      9.309      0.000     417.171     640.582\n",
+      "horsepower     8.2311      0.817     10.078      0.000       6.625       9.837\n",
+      "cylinders    290.3564     18.429     15.755      0.000     254.124     326.589\n",
+      "==============================================================================\n",
+      "Omnibus:                       11.977   Durbin-Watson:                   1.184\n",
+      "Prob(Omnibus):                  0.003   Jarque-Bera (JB):               23.325\n",
+      "Skew:                           0.076   Prob(JB):                     8.61e-06\n",
+      "Kurtosis:                       4.185   Cond. No.                         380.\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model2.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<table class=\"simpletable\">\n",
-       "<caption>OLS Regression Results</caption>\n",
-       "<tr>\n",
-       "  <th>Dep. Variable:</th>         <td>weight</td>      <th>  R-squared:         </th> <td>   0.846</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.845</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   1067.</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Date:</th>             <td>Mon, 24 Feb 2020</td> <th>  Prob (F-statistic):</th> <td>1.19e-158</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Time:</th>                 <td>20:22:36</td>     <th>  Log-Likelihood:    </th> <td> -2833.1</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>No. Observations:</th>      <td>   392</td>      <th>  AIC:               </th> <td>   5672.</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Df Residuals:</th>          <td>   389</td>      <th>  BIC:               </th> <td>   5684.</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Df Model:</th>              <td>     2</td>      <th>                     </th>     <td> </td>    \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>    \n",
-       "</tr>\n",
-       "</table>\n",
-       "<table class=\"simpletable\">\n",
-       "<tr>\n",
-       "       <td></td>         <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Intercept</th>  <td>  528.8767</td> <td>   56.816</td> <td>    9.309</td> <td> 0.000</td> <td>  417.171</td> <td>  640.582</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>horsepower</th> <td>    8.2311</td> <td>    0.817</td> <td>   10.078</td> <td> 0.000</td> <td>    6.625</td> <td>    9.837</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>cylinders</th>  <td>  290.3564</td> <td>   18.429</td> <td>   15.755</td> <td> 0.000</td> <td>  254.124</td> <td>  326.589</td>\n",
-       "</tr>\n",
-       "</table>\n",
-       "<table class=\"simpletable\">\n",
-       "<tr>\n",
-       "  <th>Omnibus:</th>       <td>11.977</td> <th>  Durbin-Watson:     </th> <td>   1.184</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Prob(Omnibus):</th> <td> 0.003</td> <th>  Jarque-Bera (JB):  </th> <td>  23.325</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Skew:</th>          <td> 0.076</td> <th>  Prob(JB):          </th> <td>8.61e-06</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Kurtosis:</th>      <td> 4.185</td> <th>  Cond. No.          </th> <td>    380.</td>\n",
-       "</tr>\n",
-       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
-      ],
       "text/plain": [
-       "<class 'statsmodels.iolib.summary.Summary'>\n",
-       "\"\"\"\n",
-       "                            OLS Regression Results                            \n",
-       "==============================================================================\n",
-       "Dep. Variable:                 weight   R-squared:                       0.846\n",
-       "Model:                            OLS   Adj. R-squared:                  0.845\n",
-       "Method:                 Least Squares   F-statistic:                     1067.\n",
-       "Date:                Mon, 24 Feb 2020   Prob (F-statistic):          1.19e-158\n",
-       "Time:                        20:22:36   Log-Likelihood:                -2833.1\n",
-       "No. Observations:                 392   AIC:                             5672.\n",
-       "Df Residuals:                     389   BIC:                             5684.\n",
-       "Df Model:                           2                                         \n",
-       "Covariance Type:            nonrobust                                         \n",
-       "==============================================================================\n",
-       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
-       "------------------------------------------------------------------------------\n",
-       "Intercept    528.8767     56.816      9.309      0.000     417.171     640.582\n",
-       "horsepower     8.2311      0.817     10.078      0.000       6.625       9.837\n",
-       "cylinders    290.3564     18.429     15.755      0.000     254.124     326.589\n",
-       "==============================================================================\n",
-       "Omnibus:                       11.977   Durbin-Watson:                   1.184\n",
-       "Prob(Omnibus):                  0.003   Jarque-Bera (JB):               23.325\n",
-       "Skew:                           0.076   Prob(JB):                     8.61e-06\n",
-       "Kurtosis:                       4.185   Cond. No.                         380.\n",
-       "==============================================================================\n",
-       "\n",
-       "Warnings:\n",
-       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-       "\"\"\""
+       "Intercept             1100.947322\n",
+       "C(origin)[T.japan]    -200.277306\n",
+       "C(origin)[T.usa]       302.353648\n",
+       "horsepower              16.540997\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model2.summary()"
+    "# Use C(variable) in the formula\n",
+    "model3 = smf.ols(formula='weight ~ C(origin) + horsepower', data=mpg).fit()\n",
+    "model3.params"
    ]
   },
   {
